2008-09-15  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Darin Adler, Beth Dakin

        Support strings for AXLists

        * WebCoreSupport/WebViewFactory.mm:
        (-[WebViewFactory AXDefinitionListTermText]):
        (-[WebViewFactory AXDefinitionListDefinitionText]):

2008-09-15  Anders Carlsson  <andersca@apple.com>

        Reviewed by Mitz.

        Merge WebNetscapePluginStream into WebBaseNetscapePluginStream.

        * Plugins/WebBaseNetscapePluginStream.h:
        * Plugins/WebBaseNetscapePluginStream.mm:
        (-[WebBaseNetscapePluginStream initWithFrameLoader:]):
        (-[WebBaseNetscapePluginStream initWithRequest:plugin:notifyData:sendNotification:]):
        (-[WebBaseNetscapePluginStream dealloc]):
        (-[WebBaseNetscapePluginStream finalize]):
        (-[WebBaseNetscapePluginStream start]):
        (-[WebBaseNetscapePluginStream stop]):
        (-[WebBaseNetscapePluginStream cancelLoadWithError:]):
        * Plugins/WebBaseNetscapePluginView.mm:
        (-[WebBaseNetscapePluginView pluginView:receivedResponse:]):
        (-[WebBaseNetscapePluginView loadRequest:inTarget:withNotifyData:sendNotification:]):
        * Plugins/WebNetscapePluginEmbeddedView.mm:
        * Plugins/WebNetscapePluginStream.h: Removed.
        * Plugins/WebNetscapePluginStream.mm: Removed.

2008-09-12  John Sullivan  <sullivan@apple.com>

        Fixed <rdar://problem/6110941> Clicking the print button in PDF content does nothing

        Reviewed by Darin Adler

        * WebView/WebPDFView.mm:
        (-[WebPDFView PDFViewPerformPrint:]):
        Implemented PDFKit delegate method that's called after a Print action in the PDF content

2008-09-12  Dan Bernstein  <mitz@apple.com>

        Reviewed by John Sullivan.

        - fix a crash in -visibleRect when it is called during WebFrameView deallocation

        * WebView/WebFrameView.mm:
        (-[WebFrameView visibleRect]): Added an early return if _private is 0.
